--- a/vkladki/vkladki/Krutie.xaml
+++ b/vkladki/vkladki/Krutie.xaml
@@ -2,13 +2,12 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:local="clr-namespace:vkladki;assembly=vkladki"
-            x:Class="vkladki.MainPage">
-
+            Title="Крутые"
+             x:Class="vkladki.Krutie">
     <TabbedPage.Children>
-        <local:superpuper/>
-        <local:Krutie/>
-        <local:srednije/>
-        <local:Otstalije/>
+        <local:decabr/>
+        <local:Janvar/>
+        <local:Fevral/>
 
 
 
