--- a/vkladki/vkladki/aprel.xaml
+++ b/vkladki/vkladki/aprel.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="vkladki.aprel"
-             Title="aprel">
+             Title="Салли">
 
     <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="Center" 
