--- a/vkladki/vkladki/avgust.xaml
+++ b/vkladki/vkladki/avgust.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="vkladki.avgust"
-             Title="avgust">
+             Title="Гвидо">
 
     <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="Center" 
