--- a/vkladki/vkladki/maj.xaml
+++ b/vkladki/vkladki/maj.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="vkladki.maj"
-             Title="maj">
+             Title="Филмор">
 
     <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="Center" 
