--- a/vkladki/vkladki/mart.xaml
+++ b/vkladki/vkladki/mart.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="vkladki.mart"
-             Title="mart">
+             Title="Чико">
 
     <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="Center" 
