--- a/vkladki/vkladki/oktabr.xaml
+++ b/vkladki/vkladki/oktabr.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="vkladki.oktabr"
-             Title="oktabr">
+             Title="Фло">
 
     <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="Center" 
